buildscript {
    repositories {
        gradlePluginPortal()
        mavenCentral()
    }
    dependencies {
        classpath 'io.spring.gradle:dependency-management-plugin:1.1.4'
    }
}

plugins {
    id 'base'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group = 'ru.netology'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.34'
        annotationProcessor 'org.projectlombok:lombok:1.18.34'

        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
    }

    test {
        useJUnitPlatform()
        jvmArgs = [
                '-XX:+EnableDynamicAgentLoading',
                '-Djdk.instrument.traceUsage=true'
        ]
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.5"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
        }
    }
}